--- a/trustfactor.html
+++ b/trustfactor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Trust Factor MVP (Dynamo-style)</title>
+  <title>Trust Factor Demo (Dynamo-style)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Optional: modern webfont (fine for GitHub Pages/Notion embeds) -->
@@ -329,7 +329,7 @@
     <div class="nav">
       <div class="brand">
         <div class="brand-mark"></div>
-        <div class="brand-name">Trust Factor MVP</div>
+        <div class="brand-name">Trust Factor Demo</div>
         <span class="pill subpill">Dynamo-style demo UI</span>
       </div>
       <div class="nav-links">
